text box layout issues fixed

--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -14,9 +14,11 @@
     margin: 0px;
 }
 
-
+.syphr-home {
+    margin-left: 20px;
+}
 
 .auth-cluster {
     width: 225px;
-    margin: auto;
+    margin-right: 20px;
 }
