--- a/react-app/src/components/TextBoxes.css
+++ b/react-app/src/components/TextBoxes.css
@@ -16,12 +16,10 @@
     grid-area: D;
     /* margin-right: 10px; */
 }
-.input-box-container
+.input-box-container,
 .output-box-container {
-    /* display: flex;
-    justify-content: center; */
-    /* margin: 50px;
-    padding: 10px */
+    display: flex;
+    justify-content: center;
 }
 
 .output-box,
@@ -32,10 +30,11 @@
     height: 400px;
     width: 300px;
     background-color: grey;
-    padding: 5px;
+    /* padding: 5px; */
 }
 .output-text-area,
 .input-text-area {
     height: 95%;
+    margin: 5px;
 }
 
